--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <nav class="controls">
-      <a href="#" class="button" id="start">Start</a>
-      <a href="#" class="button" id="stop">Stop</a>
-      <a href="#" class="button" id="reset">Reset</a>
-      
-    </nav>
-    <div class="stopwatch"></div>
-    <ul class="results"></ul>
-    <script type="text/javascript" src="script-compiled.js"></script>
+    <div id="app"></div>    
+
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    
   </body>
 </html>
