--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="https://unpkg.com/babel-standalone/babel.js"></script>
+
+    <script type="text/babel" src="script.js"></script>
     
   </body>
 </html>
